# serverless-python-story

./: .example.env  .flake8  .gitignore  LICENSE  README.md  alembic.ini  config.js  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  serverless.yml
todos/auth/: __init__.py
todos/common/: exceptions.py  parameters.py  responses.py
todos/crud/: __init__.py  create.py  delete.py  read.py  update.py
todos/db/: __init__.py
todos/db/alembic/: env.py
todos/db/alembic/versions/: d3b561aa0212_create_table_for_all_tasks.py
todos/db/models/: __init__.py  meta.py  task.py
todos/serializers/: __init__.py  task.py
todos/tests/: conftest.py
todos/tests/integration/: conftest.py
todos/tests/integration/crud/: conftest.py  test_create.py  test_delete.py  test_update.py
todos/tests/integration/crud/read/: conftest.py  test_get_all_tasks.py  test_get_task_details.py
todos/tests/unit/common/: test_parameters.py
