[tool.poetry]
name = "serverless-python-story"
version = "0.1.0"
description = "The example of Python application with the usage of Serverless"
authors = ["Grzegorz Redlicki <redlicki.grzegorz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
