[tool.poetry]
name = "serverless-python-story"
version = "0.1.0"
description = "The example of Python application with the usage of Serverless"
authors = ["Grzegorz Redlicki <redlicki.grzegorz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "18.9b0"
mypy = "^0.670.0"
flake8 = "^3.7"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.mypy_cache
  | node_modules
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
